documetation user routes and create product route
